Fixed inconsistent definition of timeseries across endpoints
